linuxmusl-arm64v8: explicitly specify linux/arm64 platform

--- a/platforms/linuxmusl-arm64v8/Dockerfile
+++ b/platforms/linuxmusl-arm64v8/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.15
+FROM --platform=linux/arm64 alpine:3.15
 LABEL maintainer="Lovell Fuller <npm@lovell.info>"
 
 # Create Alpine 3.15 (musl 1.2.2) container suitable for building musl-based Linux ARM64v8-A binaries
